# ASKK

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  index.html  soul.md
agents/: assistant.md  coder.md  orchestrator.md  planner.md  researcher.md  synthesizer.md
assets/: agent_worker-dxh2e55abc7c879cb8.js  agent_worker.js  askk-dxh0b535f9ed2be194.js  askk-dxh15d37f761fd15e4.js  askk-dxh17142b68d6298ccc.js  askk-dxh2785b585a9728af.js  askk-dxh27cf393f64916ee7.js  askk-dxh298e280be245bd4.js  askk-dxh3f91d3a5de22db68.js  askk-dxh483cb48e9fa395a9.js  askk-dxh48b13a1f3665f78d.js  askk-dxh56b14952d1984f3.js  askk-dxh5c89bc22f7b80b7.js  askk-dxh6fb162487d7cb6b.js  askk-dxh8847fef1d94ee7d.js  askk-dxh8ca9547cc55ee565.js  askk-dxh8ef2c21463c4caf.js  askk-dxha2e07d1dbab667b2.js  askk-dxha59e8d1e21a73835.js  askk-dxha5ea5374f895d2.js  askk-dxhbef06335af5add1.js  askk-dxhc115d5b64dc9e5e5.js  askk-dxhc44fbd3bb3239380.js  askk-dxhc8a5f32ed409376.js  askk-dxhd042a9e4697e869.js  askk-dxhde53c16e1638e20.js  askk-dxhebc2796459e52ebd.js  askk-dxhf452cda3c5da957f.js  askk-dxhf8ff7f356ef7dc6a.js  askk_bg-dxh3c71c7cddeaf4f8.wasm  askk_bg-dxh45a86bfc4e872f45.wasm  askk_bg-dxh88cf3ee902844e.wasm  askk_bg-dxhe9413b3b3c80d418.wasm  askk_bg-dxhe971b7132d072d8.wasm  cm6_editor-dxhcba08d1c14950f1.js  cm6_editor.js  exec_sandbox_worker-dxh35dbe37b1cddc648.js  exec_sandbox_worker.js  exec_worker-dxha33f96de94368c20.js  exec_worker.js  (+24 more)
docs/: CURATION_STRATEGY.md  EXECUTION_MODEL.md  LOCAL_MODELS.md  PROGRESS.md  TEST_PLAN.md  VISION.md  agent-prompting.md  definition-of-done.md  extensibility.md
docs/future/: VOICE.md
docs/spikes/: agent-zero-substitution.md  coi-serviceworker.md  container2wasm.md  proprietary-substrates.md  wasi-shim.md  wasix.md
experiments/coi/: LICENSE.coi-serviceworker  README.md  index.html
experiments/container2wasm/: .gitignore  README.md  fetch-assets.sh  server.js
experiments/wasi-shim/: README.md  build.sh  demo.js  demo.wasm  index.html
experiments/wasix/: .gitignore  app.mjs  index.html  package.json  server.mjs
models/: README.md
scripts/: askk-local-bridge.mjs  askk-local-bridge.test.mjs  mock-openai-provider.py  publish.sh
scripts/cm6-editor/: entry.js  package.json
scripts/local-ai/: entry.js  package.json  worker.js
scripts/lsp-python/: entry.js  package.json
scripts/lsp-ts/: .gitignore  entry.js  gen-libs.mjs  package.json
scripts/models/: fetch.sh  stage.sh
scripts/python-runner/: entry.js  package.json
scripts/wasi-runner/: README.md  entry.js  package.json
scripts/xterm-term/: entry.js  package.json
skills/assistant/: morning_briefing.md
skills/coding/: SKILL.md
skills/research/: SKILL.md
skills/synthesis/: SKILL.md
src/: agent_prompt.rs  engine.rs  execution.rs  inference.rs  main.rs  orchestrator.rs  responses.rs  state.rs  storage.rs  tools.rs  validators.rs  vfs.rs  worker_client.rs  worker_runtime.rs  worker_transport.rs  workflow.rs  workspace_files.rs
src/capabilities/: local_ai.rs  media.rs  mod.rs  page_ops.rs  system.rs
src/components/: agent_team.rs  agents_page.rs  app_shell.rs  artifact_view.rs  capabilities_page.rs  chat_panel.rs  code_editor.rs  compiled_prompt_panel.rs  event_log.rs  inspector.rs  mcp_page.rs  mod.rs  provider_settings.rs  (+6 more)
(+127 files in other folders)
