[package]
name = "askk"
version = "0.1.0"
authors = ["kaush <kaushal.beyblader@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.9", features = [] }
async-trait = "0.1"
gloo-net = "0.6"
indexed_db_futures = { version = "0.6.4", features = ["serde"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "ReadableStream", "ReadableStreamDefaultReader", "TextDecoder"] }
regex = "1.12.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dev-dependencies]
pollster = "0.4"
