[package]
name = "askk"
version = "0.1.0"
authors = ["kaush <kaushal.beyblader@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.9", features = [] }
async-trait = "0.1"
futures-channel = "0.3"
futures-util = "0.3"
gloo-net = "0.6"
indexed_db_futures = { version = "0.6.4", features = ["serde"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag", "Document", "Element", "ErrorEvent", "MessageEvent", "NodeList", "ReadableStream", "ReadableStreamDefaultReader", "TextDecoder", "Url", "Window", "Worker", "WorkerGlobalScope", "WorkerOptions", "WorkerType", "console"] }
regex = "1.12.3"

# Browser-only: hard timeouts for in-browser code execution (src/browser_exec.rs).
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

# Browser-only: headless integration test for the in-browser MCP worker round-trip
# (src/mcp/worker_transport.rs `browser_tests`). Run with a webdriver, e.g.
# `wasm-pack test --headless --safari`. Kept off the host build so `cargo test` is
# unaffected.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dev-dependencies]
pollster = "0.4"
